--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@ tests/__pycache__/test_pmsl_import.cpython-310-pytest-7.1.1.pyc
 tests/__pycache__/test_hvec_styles.cpython-310-pytest-7.1.1.pyc
 tests/__pycache__/test_hvec_styles.cpython-310-pytest-7.1.1.pyc
 tests/__pycache__/test_hvec_styles.cpython-310-pytest-7.1.1.pyc
+hvec_support/__pycache__/ipcc.cpython-310.pyc
