--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,9 @@ tests/__pycache__/test_hvec_styles.cpython-310-pytest-7.1.1.pyc
 tests/__pycache__/test_hvec_styles.cpython-310-pytest-7.1.1.pyc
 tests/__pycache__/test_hvec_styles.cpython-310-pytest-7.1.1.pyc
 hvec_support/__pycache__/ipcc.cpython-310.pyc
+development
+.gitignore
+hvec_support/bulk_importers/__pycache__/__init__.cpython-310.pyc
+hvec_support/bulk_importers/__pycache__/psmsl.cpython-310.pyc
+.gitignore
+tests/__pycache__/test_hvec_styles.cpython-310-pytest-7.1.3.pyc
