--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,4 @@ hvec_support/bulk_importers/__pycache__/user_interaction.cpython-310.pyc
 .gitignore
 hvec_support/interactions/__pycache__/__init__.cpython-310.pyc
 hvec_support/interactions/__pycache__/selectors.cpython-310.pyc
+hvec_support/__pycache__/data_handling.cpython-310.pyc
