Modifying for psmsl bulkimporter

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,5 @@ hvec_support/bulk_importers/__pycache__/user_interaction.cpython-310.pyc
 hvec_support/interactions/__pycache__/__init__.cpython-310.pyc
 hvec_support/interactions/__pycache__/selectors.cpython-310.pyc
 hvec_support/__pycache__/data_handling.cpython-310.pyc
+hvec_support/bulk_importers/__pycache__/gloss.cpython-310-HVEC-2-Donkey.pyc
+sealevel_trends.log
