Added db to csv export

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,7 @@ hvec_support/interactions/__pycache__/selectors.cpython-310.pyc
 hvec_support/__pycache__/data_handling.cpython-310.pyc
 hvec_support/bulk_importers/__pycache__/gloss.cpython-310-HVEC-2-Donkey.pyc
 sealevel_trends.log
+hvec_support.code-workspace
+tests/__pycache__/test_hvec_styles.cpython-310-pytest-7.2.0.pyc
+tests/__pycache__/test_sqlite.cpython-310-pytest-7.2.0.pyc
+.gitignore
