Added credential input

--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,5 @@ tests/__pycache__/test_sqlite.cpython-310-pytest-7.2.0.pyc
 .gitignore
 hvec_support/bulk_importers/__pycache__/show_progress.cpython-310.pyc
 hvec_support/bulk_importers/__pycache__/show_progress.cpython-310.pyc
+hvec_support/interactions/__pycache__/credentials.cpython-310.pyc
+tests/__pycache__/test_credentials.cpython-310-pytest-7.2.0.pyc
