--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,4 @@ hvec_support/bulk_importers/__pycache__/show_progress.cpython-310.pyc
 hvec_support/bulk_importers/__pycache__/show_progress.cpython-310.pyc
 hvec_support/interactions/__pycache__/credentials.cpython-310.pyc
 tests/__pycache__/test_credentials.cpython-310-pytest-7.2.0.pyc
+tests/__pycache__/test_excel.cpython-310-pytest-7.2.0.pyc
