--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,26 @@ hvec_support/bulk_importers/__pycache__/show_progress.cpython-310.pyc
 hvec_support/interactions/__pycache__/credentials.cpython-310.pyc
 tests/__pycache__/test_credentials.cpython-310-pytest-7.2.0.pyc
 tests/__pycache__/test_excel.cpython-310-pytest-7.2.0.pyc
+hvec_support/__pycache__/__init__.cpython-311.pyc
+hvec_support/__pycache__/admin.cpython-311.pyc
+hvec_support/__pycache__/excel.cpython-311.pyc
+hvec_support/__pycache__/sqlite.cpython-311.pyc
+hvec_support/__pycache__/styles.cpython-311.pyc
+hvec_support/bulk_importers/__pycache__/__init__.cpython-311.pyc
+hvec_support/bulk_importers/__pycache__/data_handling.cpython-311.pyc
+hvec_support/bulk_importers/__pycache__/gloss.cpython-311.pyc
+hvec_support/bulk_importers/__pycache__/psmsl.cpython-311.pyc
+hvec_support/bulk_importers/__pycache__/show_progress.cpython-311.pyc
+hvec_support/bulk_importers/rws/__pycache__/__init__.cpython-311.pyc
+hvec_support/interactions/__pycache__/__init__.cpython-311.pyc
+hvec_support/interactions/__pycache__/credentials.cpython-311.pyc
+tests/__pycache__/test_credentials.cpython-311-pytest-7.2.1.pyc
+tests/__pycache__/test_excel.cpython-311-pytest-7.2.1.pyc
+tests/__pycache__/test_hvec_styles.cpython-311-pytest-7.2.1.pyc
+tests/__pycache__/test_rws.cpython-311-pytest-7.2.1.pyc
+tests/__pycache__/test_sqlite.cpython-311-pytest-7.2.1.pyc
+hvec_support/interactions/__pycache__/selectors.cpython-311.pyc
+hvec_support/bulk_importers/rws/__pycache__/rws.cpython-311.pyc
+hvec_support/bulk_importers/__pycache__/show_progress.cpython-310.pyc
+hvec_support/bulk_importers/rws/__pycache__/specifier.cpython-311.pyc
+hvec_support/bulk_importers/__pycache__/rws.cpython-311.pyc
