--- a/.gitignore
+++ b/.gitignore
@@ -71,3 +71,4 @@ hvec_support/bulk_importers/rws/__pycache__/rws.cpython-311.pyc
 hvec_support/bulk_importers/__pycache__/show_progress.cpython-310.pyc
 hvec_support/bulk_importers/rws/__pycache__/specifier.cpython-311.pyc
 hvec_support/bulk_importers/__pycache__/rws.cpython-311.pyc
+hvec_support/bulk_importers/__pycache__/rws.cpython-311.pyc
