--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,6 @@ hvec_support/bulk_importers/__pycache__/show_progress.cpython-310.pyc
 hvec_support/bulk_importers/rws/__pycache__/specifier.cpython-311.pyc
 hvec_support/bulk_importers/__pycache__/rws.cpython-311.pyc
 hvec_support/bulk_importers/__pycache__/rws.cpython-311.pyc
+hvec_support/bulk_importers/__pycache__/rws.cpython-311.pyc
+hvec_support/bulk_importers/__pycache__/rws.cpython-311.pyc
+tests/Test.db
