--- a/.gitignore
+++ b/.gitignore
@@ -75,3 +75,4 @@ hvec_support/bulk_importers/__pycache__/rws.cpython-311.pyc
 hvec_support/bulk_importers/__pycache__/rws.cpython-311.pyc
 hvec_support/bulk_importers/__pycache__/rws.cpython-311.pyc
 tests/Test.db
+build/lib/hvec_support/bulk_importers/rws.py
