--- a/.gitignore
+++ b/.gitignore
@@ -75,3 +75,5 @@ hvec_support/bulk_importers/__pycache__/rws.cpython-311.pyc
 hvec_support/bulk_importers/__pycache__/rws.cpython-311.pyc
 hvec_support/bulk_importers/__pycache__/rws.cpython-311.pyc
 tests/Test.db
+hvec_support/__pycache__/general.cpython-311.pyc
+tests/__pycache__/test_hvec_general.cpython-311-pytest-7.2.1.pyc
