--- a/.gitignore
+++ b/.gitignore
@@ -81,3 +81,5 @@ tests/__pycache__/test_excel.cpython-311-pytest-7.4.2.pyc
 tests/__pycache__/test_hvec_general.cpython-311-pytest-7.4.2.pyc
 tests/__pycache__/test_rws.cpython-311-pytest-7.4.2.pyc
 tests/__pycache__/test_sqlite.cpython-311-pytest-7.4.2.pyc
+hvec_support/__pycache__/maps.cpython-311.pyc
+tests/__pycache__/test_maps.cpython-311-pytest-7.4.2.pyc
