--- a/.gitignore
+++ b/.gitignore
@@ -89,3 +89,4 @@ hvec_support/sqlite/__pycache__/helpers.cpython-311.pyc
 tests/testdata.db
 tests/__pycache__/test_general.cpython-311-pytest-7.4.2.pyc
 hvec_support/sqlite/__pycache__/db_graph.cpython-311.pyc
+hvec_support/__pycache__/pd_support.cpython-311.pyc
