--- a/.gitignore
+++ b/.gitignore
@@ -1,91 +1,3 @@
-hvec_support/__pycache__/__init__.cpython-310.pyc
-hvec_support/__pycache__/admin.cpython-310.pyc
-hvec_support/__pycache__/excelsupport.cpython-310.pyc
-hvec_support/__pycache__/hvec_excel.cpython-310.pyc
-hvec_support/__pycache__/hvec_sqlite.cpython-310.pyc
-hvec_support/__pycache__/hvec_styles.cpython-310.pyc
-hvec_support/__pycache__/hvec_styling.cpython-310.pyc
-hvec_support/__pycache__/sqlitesupport.cpython-310.pyc
-hvec_support.egg-info/dependency_links.txt
-hvec_support.egg-info/PKG-INFO
-hvec_support.egg-info/requires.txt
-hvec_support.egg-info/SOURCES.txt
-hvec_support.egg-info/top_level.txt
-hvec_support/__pycache__/excel.cpython-310.pyc
-hvec_support/__pycache__/psmsl.cpython-310.pyc
-hvec_support/__pycache__/sqlite.cpython-310.pyc
-hvec_support/__pycache__/styles.cpython-310.pyc
-tests/__pycache__/test_hvec_styles.cpython-310-pytest-7.1.1.pyc
-tests/__pycache__/test_pmsl_import.cpython-310-pytest-7.1.1.pyc
-tests/__pycache__/test_hvec_styles.cpython-310-pytest-7.1.1.pyc
-tests/__pycache__/test_hvec_styles.cpython-310-pytest-7.1.1.pyc
-tests/__pycache__/test_hvec_styles.cpython-310-pytest-7.1.1.pyc
-hvec_support/__pycache__/ipcc.cpython-310.pyc
-development
-.gitignore
-hvec_support/bulk_importers/__pycache__/__init__.cpython-310.pyc
-hvec_support/bulk_importers/__pycache__/psmsl.cpython-310.pyc
-.gitignore
-tests/__pycache__/test_hvec_styles.cpython-310-pytest-7.1.3.pyc
-hvec_support/bulk_importers/__pycache__/data_handling.cpython-310.pyc
-hvec_support/bulk_importers/__pycache__/gloss.cpython-310.pyc
-hvec_support/bulk_importers/__pycache__/ipcc.cpython-310.pyc
-hvec_support/bulk_importers/__pycache__/knmi.cpython-310.pyc
-hvec_support/bulk_importers/__pycache__/rws.cpython-310.pyc
-hvec_support/bulk_importers/__pycache__/user_interaction.cpython-310.pyc
-.gitignore
-hvec_support/interactions/__pycache__/__init__.cpython-310.pyc
-hvec_support/interactions/__pycache__/selectors.cpython-310.pyc
-hvec_support/__pycache__/data_handling.cpython-310.pyc
-hvec_support/bulk_importers/__pycache__/gloss.cpython-310-HVEC-2-Donkey.pyc
-sealevel_trends.log
-hvec_support.code-workspace
-tests/__pycache__/test_hvec_styles.cpython-310-pytest-7.2.0.pyc
-tests/__pycache__/test_sqlite.cpython-310-pytest-7.2.0.pyc
-.gitignore
-hvec_support/bulk_importers/__pycache__/show_progress.cpython-310.pyc
-hvec_support/bulk_importers/__pycache__/show_progress.cpython-310.pyc
-hvec_support/interactions/__pycache__/credentials.cpython-310.pyc
-tests/__pycache__/test_credentials.cpython-310-pytest-7.2.0.pyc
-tests/__pycache__/test_excel.cpython-310-pytest-7.2.0.pyc
-hvec_support/__pycache__/__init__.cpython-311.pyc
-hvec_support/__pycache__/admin.cpython-311.pyc
-hvec_support/__pycache__/excel.cpython-311.pyc
-hvec_support/__pycache__/sqlite.cpython-311.pyc
-hvec_support/__pycache__/styles.cpython-311.pyc
-hvec_support/bulk_importers/__pycache__/__init__.cpython-311.pyc
-hvec_support/bulk_importers/__pycache__/data_handling.cpython-311.pyc
-hvec_support/bulk_importers/__pycache__/gloss.cpython-311.pyc
-hvec_support/bulk_importers/__pycache__/psmsl.cpython-311.pyc
-hvec_support/bulk_importers/__pycache__/show_progress.cpython-311.pyc
-hvec_support/bulk_importers/rws/__pycache__/__init__.cpython-311.pyc
-hvec_support/interactions/__pycache__/__init__.cpython-311.pyc
-hvec_support/interactions/__pycache__/credentials.cpython-311.pyc
-tests/__pycache__/test_credentials.cpython-311-pytest-7.2.1.pyc
-tests/__pycache__/test_excel.cpython-311-pytest-7.2.1.pyc
-tests/__pycache__/test_hvec_styles.cpython-311-pytest-7.2.1.pyc
-tests/__pycache__/test_rws.cpython-311-pytest-7.2.1.pyc
-tests/__pycache__/test_sqlite.cpython-311-pytest-7.2.1.pyc
-hvec_support/interactions/__pycache__/selectors.cpython-311.pyc
-hvec_support/bulk_importers/rws/__pycache__/rws.cpython-311.pyc
-hvec_support/bulk_importers/__pycache__/show_progress.cpython-310.pyc
-hvec_support/bulk_importers/rws/__pycache__/specifier.cpython-311.pyc
-hvec_support/bulk_importers/__pycache__/rws.cpython-311.pyc
-hvec_support/bulk_importers/__pycache__/rws.cpython-311.pyc
-hvec_support/bulk_importers/__pycache__/rws.cpython-311.pyc
-hvec_support/bulk_importers/__pycache__/rws.cpython-311.pyc
-tests/Test.db
-hvec_support/__pycache__/general.cpython-311.pyc
-tests/__pycache__/test_hvec_general.cpython-311-pytest-7.2.1.pyc
-hvec_support/__pycache__/maps.cpython-311.pyc
-tests/__pycache__/test_excel.cpython-311-pytest-7.4.2.pyc
-tests/__pycache__/test_hvec_general.cpython-311-pytest-7.4.2.pyc
-tests/__pycache__/test_maps.cpython-311-pytest-7.4.2.pyc
-tests/__pycache__/test_sqlite.cpython-311-pytest-7.4.2.pyc
-hvec_support/sqlite/__pycache__/__init__.cpython-311.pyc
-hvec_support/sqlite/__pycache__/db_info.cpython-311.pyc
-hvec_support/sqlite/__pycache__/db_operations.cpython-311.pyc
-hvec_support/sqlite/__pycache__/helpers.cpython-311.pyc
-tests/testdata.db
-tests/__pycache__/test_general.cpython-311-pytest-7.4.2.pyc
-hvec_support/sqlite/__pycache__/db_graph.cpython-311.pyc
+hvec_support/__pycache__/
+hvec_support/sqlite/__pycache__/
+tests/__pycache__/
